--- a/test_accuracy_paper/dnns.bib
+++ b/test_accuracy_paper/dnns.bib
@@ -2950,7 +2950,7 @@
 @MISC{MM18_unpub_work,
   author =    {C. H. Martin and M. W. Mahoney},
   title =     {Unpublished Results.},
-  note =      {2018},
+  year =      {2018},
 }
 
 
