--- a/test_accuracy_paper/test_accuracy_theory.tex
+++ b/test_accuracy_paper/test_accuracy_theory.tex
@@ -3,10 +3,10 @@
 \label{sxn:theory-review}
 
 %In this section, we will briefly review results from Universality that will be relevant for our analylsis.
-s s review Martin and Mahoney's Theory of Heavy-Tailed Self-Regularization (HT-SR)~\cite{MM18_TR}.
+We review Martin and Mahoney's Theory of Heavy-Tailed Self-Regularization (HT-SR)~\cite{MM18_TR}.
 %%\michael{We need to push the other 10 pager to the archive, without the supplementary information}
 
-Write the Energy Landscape (or optimization function) for a typical DNN with $L$ layers, with activation functions $h_{l}(\cdot)$, and with $N\times M$ weight matrices $\mathbf{W}_{l}$ and biases $\mathbf{b}_{l}$, as follows:
+Write the Energy Landscape (or optimization function) for a typical DNN with $L$ layers, with activation functions $h_{l}(\cdot)$, and with $N\times M$ weight matrices $\mathbf{W}_{l}$ and biases $\mathbf{b}_{l}$, as:
 \begin{equation}
 E_{DNN}=h_{L}(\mathbf{W}_{L}\times h_{L-1}(\mathbf{W}_{L-1}\times h_{L-2}(\cdots)+\mathbf{b}_{L-1})+\mathbf{b}_{L})  .
 \label{eqn:dnn_energy}
@@ -85,7 +85,7 @@ This method works very well for exponents between $\alpha\in(2,4)$, and it is ad
 %% $\rho(\lambda)$, or Empirical Spectral  Density (ESD), of the linear weight matrices of very large number of modern, pre-trained, DNNs,
 %% such as the AlexNet, the VGG series (VGG11, VGG13, ...) ,  etc. 
 
-\charlesX{comments  will go back in}
+%% \charlesX{comments will go back in}
 %% \charlesX{
 %% We apply our new Theory of Heavy-Tailed Self Regularization (HT-SR) to analyze these large, pre-trained DNNs.  
 %% We model \emph{the correlations} arising in the DNN layers by forming the normalized correlation matrices $\mathbf{X}=(1/N)\mathbf{W}_{L}^{T}\mathbf{W}_{L}$ 
@@ -109,7 +109,7 @@ For example, see Figure~\ref{fig:power-law-histogram} for a histogram of results
 %\charlesX{explain this plot, ref to notebook and check in.  This plot is for ImageNet, includes conv@D feature maps, lots of small alpha, but not as good a fit.}
 Of course, there are exceptions: in any real DNN, the fitted $\alpha$ may range anywhere from $\sim 1.5$ to $10$ or higher~\cite{MM18_unpub_work}.  
 \ngreen{Still, overall, we observer that in nearly all large, pretrained DNNs, the correlations in the  weight matrices exhbit a remarkable Universality, being
-both Heavy Tailed, and having small--but not too small--PL exponents.  }
+both Heavy Tailed, and having small---but not too small---PL exponents.  }
 
 \begin{figure}[t] %[!htb]
    \centering
@@ -131,31 +131,34 @@ both Heavy Tailed, and having small--but not too small--PL exponents.  }
 %Empirically, it is know that these Gaussian-based models are useful for understanding older, smallish Neural Networks, such as LeNet5~\cite{MM18_TR}.
 %More modern DNNs, however, display very different, more exotic,  Universal, behavior.  
 
-\paragraph{Heavy-Tailed \ngreen{Mechanistic} Universality.} 
-\charlesX{THIS SECTION NEEDS A LOT OF WORK}
 
-\ngreen{What does it \emph{mean} to say the DNN weight matrices exhibit Universality ?  This answer, and its implications depends on your perspective--Mathematician or Physicist.}
+\paragraph{Heavy-Tailed Mechanistic Universality.} 
 
-In statistics and applied mathematics, Universality typically refers to properties of systems that can be modeled by random matrices \nred{AWKWARD(the justification being that certain system properties can be deduced, without requiring knowledge of the system details, from a few global quantities that are then used as parameters to define a random matrix ensemble)}~\cite{ER05,EW13}.
-Of course, the DNN weight matrices are not random matrices--they are strongly correlated objects--so it may seem odd that we can apply RMT to characterize them.
+%\charlesX{THIS SECTION NEEDS A LOT OF WORK}
 
-\ngreen{In Statistical Physics, Universality refers to a different, but related, phenomena,. \ngreen{It arises in systems with very strong correlations, at or near a critical point or phase transition.  It is characterized
-by experimentally measuring 'observables' that display heavy tailed behavior, and with common, or universal, power law exponents. 
-More importantly, it indicates that a specific universal mechanism drives the underlying physical process, such as Self Organized Criticality (SOC), etc.~\cite{SornetteBook,BouchaudPotters03}. 
-For this reason, we refer to the Universality observed in HT-SR, i.e. in the ESDs of (pretrtained) DNNs weight matrices, as \emph{Heavy-Tailed Mechanistic Universality.}}}
-For an illustration \nred{of what we mean} by HT-MU, See Figure~\ref{fig:universality_diagram} 
-\ngreen{
-When we observe HT behavior in $\mathbf{W}$, or rather its correlation matrix $\mathbf{X}$, 
-we use HT-RMT as a generative model.  We say that we \emph{model} $\mathbf{W}$ as if it is a random matrix,
-$\mathbf{W}^{rand}(\mu)$, drawn from a Universality class of HT-RMT (ie VHT, MHT, or WHT).  But we do not mean that $\mathbf{W}$ is itself random in any way.
-We simply use RMT as a stand-in generative model because the correlations in $\mathbf{W}^{rand}(\mu)$ resembles the correlations in  $\mathbf{W}$.
-Indeed, RMT itself does not describe the behavior of a random matrix $\mathbf{W}$ per-se, but, in fact, characterizes its correlations (i.e the eigenvalues of $\mathbf{X}$).
-Specifically, RMT describes the empirical spectral density, $\rho_{emp}(\lambda)$, its limiting, deterministic form $\rho_{\infty}(\lambda)$, as well as the 
- finite size scaling and fluctuations of the maximum eigenvalue, $\lambda_{max}$.   So even though $\mathbf{W}$ is not random, we expect 
- its ESD and maximum eigenvalue to behave \emph{as it } they were drawn from some HT-random matrix $\mathbf{W}^{rand}(\mu)$.
-   }
+What does it \emph{mean} to say the DNN weight matrices exhibit Universality? 
+This answer to this---and its implications---depends on your perspective---as a Mathematician or a Physicist.
+
+In Statistics and Applied Mathematics, Universality typically refers to properties of systems that can be modeled by random matrices.
+The justification is that certain system properties can be deduced, without requiring knowledge of system details, from a few global quantities that are then used as parameters to define a random matrix ensemble~\cite{ER05,EW13}.
+Of course, the DNN weight matrices are not random matrices---they are strongly correlated objects---so it may seem odd that we can apply RMT to characterize them.
+
+In Statistical Physics, Universality refers to a different, but related, phenomena.
+It arises in systems with very strong correlations, at or near a critical point or phase transition. 
+It is characterized by experimentally measuring ``observables'' that display HT behavior, with common---or universal---PL exponents. 
+More importantly, it indicates that a specific universal mechanism drives the underlying physical process, e.g., Self Organized Criticality, directed percolation, etc.~\cite{SornetteBook,BouchaudPotters03}. 
+For this reason, we refer to the Universality observed in HT-SR, i.e., in the ESDs of (pre-trtained) DNNs weight matrices, as \emph{Heavy-Tailed Mechanistic Universality (HT-MU)}.
+
+For an illustration of what we mean by HT-MU, see Figure~\ref{fig:universality_diagram}. 
+When we observe HT behavior in $\mathbf{W}$, or rather its correlation matrix $\mathbf{X}$, we use HT-RMT as a generative model. 
+We say that we \emph{model} $\mathbf{W}$ \emph{as if} it is a random matrix, $\mathbf{W}^{rand}(\mu)$, drawn from a Universality class of HT-RMT (i.e., VHT, MHT, or WHT). 
+Of course, we do not mean that $\mathbf{W}$ is itself random in any way.
+We simply use RMT as a stand-in generative model because the correlations in $\mathbf{W}^{rand}(\mu)$ resembles the correlations in  $\mathbf{W}$. 
+Indeed, RMT itself does not describe the behavior of a random matrix $\mathbf{W}$ per-se, but it characterizes its correlations (i.e., the eigenvalues of $\mathbf{X}$). 
+Specifically, RMT describes the empirical spectral density, $\rho_{emp}(\lambda)$, its limiting, deterministic form $\rho_{\infty}(\lambda)$, as well as the finite size scaling and fluctuations of the maximum eigenvalue, $\lambda_{max}$~\cite{MM18_TR}. 
+So, even though $\mathbf{W}$ is not random, we expect its ESD and maximum eigenvalue to behave \emph{as if} they were drawn from some HT-random matrix $\mathbf{W}^{rand}(\mu)$.
    
- \nred{NEED LEAD IN}
+%% \nred{NEED LEAD IN}
  
 %See Figure~\ref{fig:universality_diagram} for an illustration.
 %Due to the training process, trained DNN weight matrices are strongly-correlated; and fitting their ESDs to Eqn.~(\ref{eqn:eigenval_pl}) amounts to \emph{modeling} the correlational properties in terms of 
@@ -169,8 +172,6 @@ Specifically, RMT describes the empirical spectral density, $\rho_{emp}(\lambda)
 %In this case, random matrices arise since they are particularly easy-to-analyze members of a Universality class, for which these relations should hold.
 %In particular, strongly-correlated DNN weight matrices are clearly not random matrices, but the latter can be used to \emph{model} the former (since, if they are members of the same Universality class, then scaling relations should hold for both).
 
-
-
 %% \charles{%
 %% EXPLAIN UNIVERSALITY, AS WE USE IT, IN THIS SECTION. 
 %% NOTE: we model the ESD of X, the correlations in W, and therefore how the data has been learned. 
@@ -183,27 +184,28 @@ Specifically, RMT describes the empirical spectral density, $\rho_{emp}(\lambda)
 
 \begin{figure}[t]  %[!htb]
    \centering
-   \includegraphics[scale=0.40]{img/universality_classes.png} 
+   %\includegraphics[scale=0.40]{img/universality_classes.png} 
+   \includegraphics[scale=0.36]{img/universality_classes.png} 
    \caption{Illustration of our use of HT Universality.  
-            \michael{Charles, maybe tweak this figure to rotate and horizontally show transfer of Universal things between different matrices.}  
+            %\michael{Charles, maybe tweak this figure to rotate and horizontally show transfer of Universal things between different matrices.}  
             A random matrix $\mathbf{W}(\mu)$ with elements drawn i.i.d. from the HT distribution of Eqn.~(\ref{eqn:ht_dstbn}) and weight matrix from a modern well-trained DNN that exhibits strong correlations $\mathbf{W}^{str. corr.}$ each arise from different generative mechanisms, and they different.  Both exhibit similar Universality properties, as evidneced by the HT properties of the ESDs of their corresponding correlation matrices $\mathbf{X}$, and so we expect Universal properties to be similar between them.}
    \label{fig:universality_diagram}
 \end{figure}
 
 
 \paragraph{Heavy-Tailed Random Matrix Theory.} 
-To characterize this behavior, we use a HT variant of RMT, where we use HT random matrices to elucidate different Universality classes.
+To characterize this HT-MU behavior, we use a HT variant of RMT and use HT random matrices to elucidate different Universality classes.
 Let $\mathbf{W}(\mu)$ be an $N \times M$ random matrix with entries chosen i.i.d. from
 \begin{equation}
-\Probab{ W_{i,j} } \sim \dfrac{W_{0}^{\mu}}{|W_{i,j}|^{1+\mu}}  ,
+\Probab{ W_{i,j} } \sim \frac{W_{0}^{\mu}}{|W_{i,j}|^{1+\mu}}  ,
 \label{eqn:ht_dstbn}
 \end{equation}
 where $W_{0}$ is the typical order of magnitude of $W_{i,j}$, and where $\mu>0$. 
-These HT matrix models were first introduced in the Statistical Physics literature, where they are called \'L\'evy Matrices when $0<\mu<2$~\cite{PB94}; see also~\cite{BM97,BJNx01_TR,BJNx06_TR,heavytails2007}.
-More recently there has been more mathematical work on HT random matrices~\cite{AG08,AAP09,BJ09_TR,DPS14,AT16}.
+These HT matrix models were first introduced in the Statistical Physics literature, where they are called L\'evy Matrices when $0<\mu<2$~\cite{PB94}; see also~\cite{BM97,BJNx01_TR,BJNx06_TR,heavytails2007}.
+More recently, there has been mathematical work on HT random matrices~\cite{AG08,AAP09,BJ09_TR,DPS14,AT16}.
 There are at least 3 different Universality classes%
 \footnote{Results for $\mu=2,4$ are slightly different~\cite{SornetteBook,BouchaudPotters03}.  We don't describe them since we don't expect to be able to resolve them numerically.  Also, sometimes L\'evy matrices are split into VHT for $1<\mu<2$ and EHT (Extremely Heavy-Tailed) for $0<\mu<1$, as the properties for these two parameter regimes are somewhat different~\cite{SornetteBook,BouchaudPotters03}.}
-of Heavy-Tailed random matrices, defined by the range $\mu$ takes on:
+of HT random matrices, defined by the range $\mu$ takes on:
 \begin{itemize}
 \item $0<\mu<2$: VHT: Universality class of Very Heavy-Tailed (or L\'evy) matrices;
 \item $2<\mu<4$: MHT: Universality class of Moderately Heavy-Tailed (or Fat-Tailed) matrices;
@@ -215,11 +217,11 @@ of Heavy-Tailed random matrices, defined by the range $\mu$ takes on:
 %%\michael{We need to highlight how the HT Universality we use is one that crosses Universality classes, i.e., VHT and finite-sized MHT, and certainly is NOT limited to random matrices, but we use RMT to characterize certain things.}
 %%
 
+
 \paragraph{Heavy-Tailed, Finite-Size Relations.}
 
-\ngreen{HT-RMT provides more than HT Universality classes; it also provides simple relations between the empirical observables, i.e. 
- the power law exponent $\alpha$ and the maximum eigenvalue $\lambda_{max}$ of each $\mathbf{W}$, with the parameter(s) $\mu$
-of our generative theory, i.e HT-RMT.   }
+HT-RMT provides more than HT Universality classes.
+It also provides simple relations between the empirical observables, e.g., the PL exponent $\alpha$ and the maximum eigenvalue $\lambda_{max}$ of each $\mathbf{W}$, with the parameter(s) $\mu$ of our generative theory, i.e, HT-RMT.   
 
 %% For the VHT Universality class, the PL tail of Eqn.~(\ref{eqn:eigenval_pl}) persists in the infinite limit $N\rightarrow\infty$, for $Q$ fixed; and
 %% we have the linear relation between our observed exponent $\alpha$ and the theoretical~$\mu$:
@@ -274,36 +276,35 @@ follows a Frechet distribution (i.e., an exponentially-truncated PL); and we exp
 \text{VHT\;\&\;MHT:}\;\;\;\lambda_{max}\sim N^{4/\mu-1}  
 \label{eqn:scaling_of_lambda_max}
 \end{equation}
-(where, for simplicity, $Q=1$).  \charlesX{Add back in Q}
+(where, for simplicity, $Q=1$).  
+%%\charlesX{Add back in Q}
 
 %Let's clarify Eqns.~(\ref{eqn:alpha_mu_vht_and_mht}) and~(\ref{eqn:scaling_of_lambda_max}):  
 Eqns.~(\ref{eqn:alpha_mu_vht_and_mht}) and~(\ref{eqn:scaling_of_lambda_max}) show that we have very simple relationships that apply to random matrices that lie within both 
 the VHT and MHT Universality classes.
 The $\alpha$ and $\lambda_{max}$ are empirically-measurable quantities--of real or synthetic matrices, while $\mu$ is a parameter of the HT-RMT model. How shall we use these relations ?
 
- \emph{Due to \nred{Heavy Tailed Mechanistic Universality (HT-MU)}}, we expect Eqn.~(\ref{eqn:scaling_of_lambda_max}) to hold for matrices 
- in these HT Universality classes (as evidenced by their ESD properties), e.g., DNN weight matrices $\mathbf{W}$ after training--
-  \emph{even when the matrix is not itself a HT random matrix} and therefore not governed by RMT or ~EVT.
-\michael{MM ques: maybe derive these 2 relations---Eqns.~(\ref{eqn:alpha_mu_vht_and_mht}) and~(\ref{eqn:scaling_of_lambda_max})---in the appendix.}
-We shall use these Universal HT finite size relations to derive a simple capacity control metric for our
- theory of HT-SR, and relate this to the well known product norm capacity control metric.
+\emph{Due to Heavy Tailed Mechanistic Universality (HT-MU)}, we expect Eqn.~(\ref{eqn:scaling_of_lambda_max}) to hold for matrices in these HT Universality classes (as evidenced by their ESD properties), e.g., DNN weight matrices $\mathbf{W}$ after training--\emph{even when the matrix is not itself a HT random matrix} and therefore not governed by RMT or EVT.
+%%HOLD OFF FOR NOW, MAYBE LATER%% \michael{MM ques: maybe derive these 2 relations---Eqns.~(\ref{eqn:alpha_mu_vht_and_mht}) and~(\ref{eqn:scaling_of_lambda_max})---in the appendix.}
+We shall use these Universal HT finite size relations to derive a simple capacity control metric for our theory of HT-SR, and relate this to the well known product norm capacity control metric.
 
 %We will use this to derive a relationship that holds between $\alpha$, $\lambda_{max}$, and perhaps other observables such as matrix norms, and then 
 %appeal to \nred{HT-MU} to apply it to  \nred{the highly} non-random, pre-trained DNN weight matrices that also lie within these HT Universality classes.
+
+
 
 %\section{Using Heavy-Tailed Universality}
 \section{Heavy-Tailed Mechanistic Universality and Capacity Control Metrics}
 \label{sxn:theory-new}
 
-
-\charlesX{\bf{Heavy-Tailed Self-Regularization and Capacity Control Metrics}}
+%\charlesX{\bf{Heavy-Tailed Self-Regularization and Capacity Control Metrics}}
 
 %In this section, we will describe our proposed capacity control metric.
 %
 From prior work~\cite{MM18_TR}, we expect that smaller PL exponents of the ESD imply more regularization and therefore better generalization. 
 Since smaller norms of weight matrices often correspond to better capacity control~\cite{LMBx18_TR,SHNx17_TR,PLMx18_TR,BFT17_TR}, we would like to relate the empirical PL exponent $\alpha$ to the empirical Frobenius norm $\Vert\mathbf{W}\Vert_{F}$.
-At least na\"{\i}vely, this is a challenge, since smaller PL exponents often correspond to larger matrix norms (and thus worse generalization\nred{!}).
-To resolve this apparent discrepancy, we will exploit HT \nred{Mechanistic} Universality to propose a Universal DNN complexity metric.
+At least na\"{\i}vely, this is a challenge, since smaller PL exponents often correspond to larger matrix norms (and thus worse generalization!).
+To resolve this apparent discrepancy, we will exploit HT-MU to propose a Universal DNN complexity metric.
 
 \paragraph{Form of a Proposed Universal DNN Complexity Metric.} 
 
@@ -317,14 +318,14 @@ of the PL exponents, $\alpha_{l,i}$, for each layer weight matrix $\mathbf{W}_{l
 \hat{\alpha}:=\dfrac{1}{N_L}\sum_{l,i}b_{l,i}\alpha_{l,i}  .
 \label{eqn:alpha_hat_generic}
 \end{equation}
-Here, the smaller $\hat{\alpha}$, the better we expect the DNN to represent training data, and (presumably) the better the DNN will generalize to new data.
+Here, the smaller $\hat{\alpha}$, the better we expect the DNN to represent training data, and (presumably) the better the DNN will generalize.  % to new data.
 The question is: what are good weights~$b_{l,i}$?
 
 As we now show, we can extract the weighted average $\hat{\alpha}$ directly from the more familiar Product Norm, by exploiting both HT Universality, and its finite-size effects, arising
 in DNN weight matrices.
 
 
-%%%\paragraph{THEOREM:} \emph{The data dependent VC-like complexity of a Deep Neural Network can be expressed a weighted average the of power law exponents describing the empirical spectral density of the layer weight matrices}
+%%%\paragraph{THEOREM:} \emph{The data dependent VC-like complexity of a Deep Neural Network can be expressed a weighted average the of power law exponents describing the empirical spectral density of layer weight matrices}
 %%
 %%%\charles{\paragraph{PROOF:...}}
 
@@ -336,7 +337,7 @@ in DNN weight matrices.
 %% Worst case Bounds vs Average Case for complexity metrics, and REVIEW MORE OF HIDary's work, either here and/or in the Intro}
 %% \michael{Their method works well on toy data for worst-case, and to get it to work they need to modify the loss function in worse-case, but if we consider average case then we can apply it to large realistic DNNs---put these comments here or in intro.}
 
-It has been suggested that the complexity, $\mathcal{C}$, of a DNN can be characterized by the product of the norms of the layer weight matrices,
+It has been suggested that the complexity, $\mathcal{C}$, of a DNN can be characterized by the product of the norms of layer weight matrices,
 $$
 \mathcal{C}\sim\Vert\mathbf{W}_{1}\Vert\times\Vert\mathbf{W}_{2}\Vert\cdots\Vert\mathbf{W}_{L}\Vert ,
 $$
@@ -347,7 +348,7 @@ To that end, we consider a log complexity
 \log\mathcal{C} &\sim& \log\bigg[\Vert\mathbf{W}_{1}\Vert\times\Vert\mathbf{W}_{2}\Vert\cdots\Vert\mathbf{W}_{L}\Vert\bigg]  \\
                 &\sim& \bigg[\log\Vert\mathbf{W}_{1}\Vert+\log\Vert\mathbf{W}_{2}\Vert\cdots\log\Vert\mathbf{W}_{L}\Vert\bigg]  ,
 \end{eqnarray*}
-and we define the average log norm of the weight matrices as
+and we define the average log norm of weight matrices as
 \begin{equation}
 \langle\log\Vert\mathbf{W}\Vert\rangle=\dfrac{1}{N_{L}}\sum_{l}\log\Vert\mathbf{W}_{l}\Vert  .
 \label{eqn:av_log_norm}
@@ -369,7 +370,7 @@ To our knowledge, this is the first time this PL--Norm relation has been noted i
 A few comments on Eqn.~(\ref{eqn:basic_relation}).
 First, it provides a connection between the PL parameter $\alpha$ of HT-SR Theory and the weight norm $\Vert\mathbf{W}\Vert^{2}_{F}$ of more traditional statistical learning theory.
 Second, it has the form of the well-known Hausdorff dimension~\cite{Sch07}.
-Third, it shows that the fitted PL exponent can alternatively be interpreted (up to the $\frac{1}{N}$ scaling) \nred{as} the Stable Rank in Log-Units:
+Third, it shows that PL exponents can alternatively be interpreted (up to the $\frac{1}{N}$ scaling) as the Stable Rank in Log-Units:
 $$
 \mbox{Log-Units Stable Rank:} 
 \quad
@@ -385,14 +386,13 @@ We derive Eqn.~(\ref{eqn:basic_relation}) in the special case of very small PL e
 \label{enum:second}
 For finite size random matrices $\mathbf{W}^{rand}(\mu)$, the MHT Universality class, $\mu\in(2,4)$,  behaves \emph{llike} the VHT Universality , $\mu\in(1,2)$.
 (see section XXX). 
-Because of this similarity, we show we can extend Eqn.~(\ref{eqn:basic_relation}) , approximately, to larger PL exponents.
-For  $N\sim\mathcal{O}(100-1000)$, $\alpha\;\log\lambda_{max}$  \nred{increases nearly linearly}  with $\log\Vert\mathbf{W}^{rand}(\mu)\Vert^{2}_{F}$  as $\mu$ increases.
+Because of this similarity, we show we can extend Eqn.~(\ref{eqn:basic_relation}), approximately, to larger PL exponents.
+For $N\sim\mathcal{O}(100-1000)$, $\alpha\;\log\lambda_{max}$ increases nearly linearly with $\log\Vert\mathbf{W}^{rand}(\mu)\Vert^{2}_{F}$ as $\mu$ increases.
 For larger $N$, the relation saturates for large $\mu$.  
 \item
 \label{enum:third}
-\emph{As evidence of \nred{Heavy Tailed Mechanistic} Universality (HT-MU)}, we observe empirically that the PL-Norm (Eqn.~(\ref{eqn:basic_relation})  relation also 
-applies, approximately, to the real DNN weight matrices $\mathbf{W}$. We see that $\alpha\;\log\lambda_{max}$ 
-   \nred{is positively} correlated with $\log\Vert\mathbf{W}\Vert^{2}_{F}$  as $\alpha$  increases, and even shows similar saturation effects at large $\alpha$.
+\emph{As evidence of HT-MU}, we observe empirically that the PL-Norm (Eqn.~(\ref{eqn:basic_relation}) relation also applies, approximately, to the real DNN weight matrices $\mathbf{W}$. 
+We see that $\alpha\;\log\lambda_{max}$ is positively correlated with $\log\Vert\mathbf{W}\Vert^{2}_{F}$ as $\alpha$ increases, and even shows similar saturation effects at large $\alpha$.
 \end{enumerate}
 
 We will discuss each of these in more detail below.
@@ -437,18 +437,17 @@ Given these connections, in Section~\ref{sxn:emp}, we will use $\hat{\alpha}$ to
 
 \paragraph{The PL--Norm Relation: Deriving a Special Case of Eqn.~(\ref{eqn:basic_relation}).}
 
-Here, we derive Eqn.~(\ref{eqn:basic_relation}) in the special case of very small PL exponent, $\alpha \rightarrow 1$,
-for an \nred{$N \times M$} random matrix $\mathbf{W}$, \nred{with $M=N, Q=1$, and} with elements drawn from Eqn.~(\ref{eqn:ht_dstbn}).%
+Here, we derive Eqn.~(\ref{eqn:basic_relation}) in the special case of very small PL exponent, $\alpha \rightarrow 1$, for an $N \times M$ random matrix $\mathbf{W}$, {with $M=N, Q=1$, and with elements drawn from Eqn.~(\ref{eqn:ht_dstbn}).%
 \footnote{We derive Eqn.~(\ref{eqn:basic_relation}) at what is sometimes pejoratively known as ``at a physics level of rigor.''  That is fine, as our justification will be seen in Section~\ref{sxn:emp}.  Recall our goal: to derive a very simple expression relating fitted PL exponents and Frobenius norms that usable by practical engineers working with state-of-the-art models, i.e., not simply small toy models.  There is very little ``rigorous'' work on HT-RMT, less still on understanding finite-sized effects of HT Universality.  Hopefully, our results will lead to more work along these lines.  }
-\michael{MM TO RECHECK DETAILS.}
+\michael{MM TO RECHECK DETAILS; and be careful below about $\mu$s and $\alpha$s.}
 That is, this is an asymptotic relation for the VHT Universality class for very small exponents.
-\michael{MM be careful below about $\mu$s and $\alpha$s.}
 %
 To start, recall that 
 $$ 
-\Vert \mathbf{W}\Vert_{F}^{2}=\mbox{Trace}[\mathbf{W}^{T}\mathbf{W}]=N\;\mbox{Trace}[\mathbf{X}]
-$$.
-Since, for \nred{$\mu \gtrsim 0$}, \michael{NOT $\alpha$, but maybe 1?} the eigenvalue spectrum is dominated by a single large eigenvalue, it follows that
+\Vert \mathbf{W}\Vert_{F}^{2}=\mbox{Trace}[\mathbf{W}^{T}\mathbf{W}]=N\;\mbox{Trace}[\mathbf{X}]  .
+$$
+Since, for \nred{$\mu \gtrsim 0$}, \michael{NOT $\alpha$, but maybe 1?} 
+the eigenvalue spectrum is dominated by a single large eigenvalue, it follows that
 $$
 \Vert \mathbf{W}\Vert_{F}^{2}\approx N\lambda_{max}  , 
 $$
@@ -502,7 +501,7 @@ $$
 \dfrac{1}{4/\mu-1}\bigg\rvert_{\mu=1.15}\approx\dfrac{1}{2}\mu-\dfrac{1}{6}+\cdots\approx\dfrac{1}{2}\mu  .
 $$
 This established the approximate---and surprising---linear relation we want for $\mu \gtrsim 1$. 
-\michael{MM again, be careful below about $\mu$s and $\alpha$s.}
+%\michael{MM again, be careful below about $\mu$s and $\alpha$s.}
 
 
 
@@ -565,7 +564,7 @@ The numerical results in Figure~\ref{fig:randW} show that as $\alpha$ increases:
 when $\alpha<2$, there exists a near-linear relation; and
 when $\alpha>2$, for $N,M$ large, the relation saturates, becoming constant, while for smaller $N,M$, there exists a near-linear relation, but with strong finite-size effects.
 These numerical results demonstrate that $ \log\Vert\mathbf{W}\Vert^{2}_{F}\approx\alpha\log\lambda_{max} $ works very well for VHT random matrices, for $\alpha<2$, and that it works moderately well for MHT matrices and even some WHT matrices.
-In particular, for MHT matrices, the finite-size regime in which it holds moderately \nred{well when $N,M\sim\mathcal{O}(100-1000)$, which is typical} for modern DNNs. 
+In particular, for MHT matrices, the finite-size regime in which it holds moderately well when $N,M\sim\mathcal{O}(100-1000)$, which is typical for modern DNNs. 
 
 %% \michael{Make sure what I include in the above par is enough for what I need here.}
 %% \michael{Here is the place to make explicit the connection between $\alpha$ and $\mu$, for finite $N$ and asymptotically, and to say Eqns.~(\ref{eqn:alpha_mu_vht_and_mht}) holds for both VHT and MHT, for realistic values of $N$.}
